style.css
@font-face {
  font-family: FiraSans-SemiBold;
  src: url(assets/fonts/Fira_Sans/FiraSans-SemiBold.ttf);
}
@font-face {
  font-family: FiraSans-Medium;
  src: url(assets/fonts/Fira_Sans/FiraSans-Medium.ttf);
}

@font-face {
  font-family: WorkSans-Regular;
  src: url(assets/fonts/Work_Sans/static/WorkSans-Regular.ttf);
}

@font-face {
  font-family: WorkSans-Medium;
  src: url(assets/fonts/Work_Sans/static/WorkSans-Medium.ttf);
}

@font-face {
  font-family: CherrySwash;
  src: url(assets/fonts/Cherry_Swash/CherrySwash-Regular.ttf);
}

/* Resets start*/

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

/* Resets end */

/*Navigation menu starts */

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #ffffff;
}

nav a {
  text-decoration: none;
  margin-top: auto;
  margin-bottom: auto;
  color: #000000;
}

nav img {
  display: flex;
  object-fit: contain;
  height: 100px;
  width: auto;
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 50%;
  margin-right: 50%;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  flex-basis: 80%;
  justify-content: space-between;
  list-style-type: none;
  padding: 0;
  margin: 2em 2em 2em 0;
  gap: 10px 20px;
  align-items: center;
}

/*Navigation menu ends */

h1 {
  font-family: FiraSans-SemiBold;
  font-size: 35px;
}

h2 {
  font-family: FiraSans-Medium;
  font-size: 18px;
}

p {
  font-family: WorkSans-Regular;
  font-size: 16px;
}

.desktopMenuItem {
  font-family: WorkSans-Medium;
  font-size: 16px;
}

.logoText {
  font-family: CherrySwash;
  font-size: 32px;
  color: #000000;
}

p.introParagraph {
  font-size: 20px;
}

.cardButton {
  font-family: FiraSans-Medium;
  font-size: 16px;
}

main {
  background-color: #f8f6f7;
  color: #000000;
}

nav {
  background-color: #e5decd;
  color: #000000;
}
/* Settings specifically for screen size 700px or larger start*/

@media (width>=700px) {
  body {
    max-width: 100%;
    margin: 0;
  }
}

/* Settings specifically for screen size 700px or larger end*/

/* Settings for the upper half of main start*/

.introSection {
  max-width: 40%;
  margin: 0 20%;
  position: relative;
}

/* Settings for the upper half of main end*/

/* Settings for the lower half of main start*/

/*
.infoSection {
  background-color: #41461f;
  border-top-right-radius: 30px;
  margin-right: 20%;
  position: relative;
}
  */

.infoSection {
  position: relative;
}

.background-object {
  position: absolute;
  background-color: #41461f;
  width: 80%;
  height: 100%;
  border-top-right-radius: 30px;
}

.infoCard {
  background-color: #e5decd;
  padding: 1em;
  margin-top: 2em;
  text-align: center;
  position: relative;
}

.infoCard_1 {
  grid-column: 2;
  border-top-left-radius: 30px;
  margin-right: 1em;
}

.infoCard_3 {
  border-top-right-radius: 30px;
  margin-left: 1em;
  margin-right: 1em;
}

/* Settings for the lower half of main end*/

